Fixes #29 - vertically align 'Remove Video' button

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -2,7 +2,12 @@ form {
   textarea {
     height: 200px;
   }
+
   div.datetime {
     color: transparent;
+  }
+
+  .remove-performance-video {
+    margin-top: 23px;
   }
 }
